[project]
name = "accrue-tracker"
version = "0.1.0"
description = "Cashramp Market Rate Tracker & Forecasting"
authors = [
    {name = "USER"}
]
readme = "README.md"
requires-python = "^3.11"
dependencies = [
    "requests (>=2.32.5,<3.0.0)",
    "pandas (>=2.3.2,<3.0.0)",
    "streamlit (>=1.49.1,<2.0.0)",
    "prophet (>=1.1.7,<2.0.0)",
    "statsmodels (>=0.14.5,<0.15.0)",
    "scikit-learn (>=1.7.2,<2.0.0)",
    "matplotlib (>=3.10.6,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
